# spa

client/client/: cmd_opts.h  config_init.c  config_init.h  fko_util.c  fwknop.c  fwknop.h  fwknop_common.h  getpasswd.c  getpasswd.h  http_resolve_host.c  log_msg.c  log_msg.h  spa_comm.c  spa_comm.h  spanop.c  spanop.h  spanop_common.h  utils.c  utils.h
client/common/: common.h  fko_util.c  (+6 more)
server/: CMakeLists.txt  cmd_cycle.c  config_init.c  extcmd.c  extcmd.h  fw_util.c  fw_util_firewalld.c  fw_util_firewalld.h  fw_util_ipf.h  fw_util_ipfw.c  fw_util_iptables.c  fw_util_iptables副本.c  fw_util_pf.c  fwknopd.c  fwknopd.h  fwknopd_common.h  incoming_spa.c  log_msg.h  nfq_capture.h  pcap_capture.c  pcap_capture.h  sig_handler.c  sig_handler.h  udp_server.h  utils.c  utils.h
server/common/: common.h  cunit_common.h  fko_util.c  fko_util.h  strlcat.c  strlcpy.c
server/lib/: Makefile.in  base64.c  base64.h  cipher_funcs.c  cipher_funcs.h  digest.c  fko.h  fko_common.h  fko_decode.c  fko_digest.c  fko_encode.c  fko_encryption.c  fko_error.c  fko_funcs.c  fko_limits.h  fko_state.h  fko_utests.c  gpgme_funcs.c  gpgme_funcs.h  hmac.c  md5.h  rijndael.h  sha1.h  ztn_decode.c  ztn_encryption.c  ztn_error.c  ztn_hmac.c  ztn_limits.h  ztn_state.h  ztn_timestamp.c  ztn_user.h
server/server/: access.c  access.conf  access.h  cmd_cycle.c  cmd_cycle.h  cmd_opts.h  config_init.c  config_init.h  extcmd.c  extcmd.h  fw_util.c  fw_util.h  fw_util_firewalld.c  fw_util_ipf.c  fw_util_ipfw.c  fw_util_ipfw.h  fw_util_iptables.c  fw_util_pf.c  fw_util_pf.h  fwknopd.conf  fwknopd_errors.c  incoming_spa.c  incoming_spa.h  log_msg.c  log_msg.h  nfq_capture.c  nfq_capture.h  pcap_capture.c  pcap_capture.h  process_packet.c  process_packet.h  replay_cache.c  replay_cache.h  sig_handler.c  spad.c  spad.h  spad_common.h  spad_errors.c  spad_errors.h  spad_utests.c  (+6 more)
能运行的代码/client/: CMakeLists.txt
能运行的代码/client/client/: Makefile.in  fwknop_utests.c
能运行的代码/client/common/: Makefile.in
能运行的代码/client/lib/: fko_encode.c  fko_utests.c
(+58 files in other folders)
